TestSuite/PascalABCTests/errors/err0267.pas
begin
  var s := 'sfgj' 'ery';  
end.  